Fix broken styles

--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -9,11 +9,13 @@
 
 .dashboard {
   width: 100%;
+  //height: 400px;
   margin: 0;
   padding: 0;
-  display: block;
+  display: flex;
   overflow: hidden;
   list-style-type: none;
+  flex-direction: column;
   box-sizing: border-box;
 }
 
