--- a/src/components/Dashboard/Game/Game.module.scss
+++ b/src/components/Dashboard/Game/Game.module.scss
@@ -1,6 +1,7 @@
 @import "~styles/variables";
 
 .game {
+  height: $spacer * 50;
   box-shadow: $box-shadow;
 }
 
